--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Title of the document</title>
+    <title>LiLpp Gang</title>
 </head>
 
 <body>
-    The content of the document......
+    LiLpp gang 5 lyfe. Merch Store coming soon.
 </body>
 
 </html>
