--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    LiLpp gang 4 lyfe. Merch Store coming soon.
+    LiLpp gang 4 lyfe. <br><br>Day 100 of Playing with Rajqueer. No improvements. signs of mental rtardation. <br> He only figured out what a UAV does yesterday (with arrows showing vertical location) 600 games in. <br> We'll continue experimentation and provide
+    yelling and pointers as usual. If no improvement is shown <br> in the next 50 games, recommended treatment is to spread your ass cheeks open and queef as loudly as you can <br> in his face. It may reset his brain and allow for actual information processing.
+    <br><br> Until next time, this is Dakshgertz signing off.
 </body>
 
 </html>
